Added tests, finished swagger, added dockercompose
