# docs/swagger.json
@@ -9,7 +9,34 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/subscription/create": {
+        "/subscriptions": {
+            "get": {
+                "description": "Отдает массив из всех подписок в базе; пустой json если подписок нет",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "subscriptions"
+                ],
+                "summary": "Получение списка всех подписок из базы",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.RawSubscription"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Создаёт новую подписку из данных в теле запроса",
                 "consumes": [
@@ -21,7 +48,7 @@
                 "tags": [
                     "subscriptions"
                 ],
-                "summary": "Хендлер для создания новой подписки",
+                "summary": "Cоздание новой подписки",
                 "parameters": [
                     {
                         "description": "Subscription info",
@@ -29,15 +56,15 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.Subscription"
+                            "$ref": "#/definitions/model.RawSubscription"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Subscription successfully created",
                         "schema": {
-                            "$ref": "#/definitions/model.Subscription"
+                            "$ref": "#/definitions/model.RawSubscription"
                         }
                     },
                     "400": {
@@ -46,33 +73,10 @@
                             "type": "string"
                         }
                     },
-                    "500": {
-                        "description": "Internal server error",
+                    "409": {
+                        "description": "Subscription already exists",
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/subscription/list": {
-            "get": {
-                "description": "Отдает массив из всех пользователей базы",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Хендлер для получения списка всех подписок из базы",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Subscription"
-                            }
                         }
                     },
                     "500": {
@@ -84,22 +88,73 @@
                 }
             }
         },
-        "/subscription/update/{sid}": {
-            "put": {
-                "description": "Обновляет подписку по ее SID из URL, новые данные берутся из тела запроса",
-                "consumes": [
-                    "application/json"
+        "/subscriptions/report": {
+            "get": {
+                "description": "Выдает сумму стоимости подписок по указанному периоду(конкретному месяцу в формате \"07-2024\"), пользователю и провайдеру; пользователь и провайдер не являются обязательными полями.",
+                "tags": [
+                    "subscriptions"
                 ],
+                "summary": "Подсчет суммы подписок удовлетворяющим условиям",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "07-2025",
+                        "description": "Период(конкретный месяц в формате 07-2024) для поиска подписок в активном статусе",
+                        "name": "period",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "adjhdjfnv-njdfv889",
+                        "description": "UID пользователя",
+                        "name": "uid",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "Yandex",
+                        "description": "Имя провайдера услуги",
+                        "name": "provider",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Status OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Report"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/subscriptions/{sid}": {
+            "get": {
+                "description": "Возвращает подписку в формате JSON по ее SID из URL",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "subscriptions"
                 ],
-                "summary": "Обновление подписки по ее SID",
+                "summary": "Получение подписки по SID",
                 "parameters": [
                     {
                         "type": "integer",
+                        "example": 20,
                         "description": "SID подписки",
                         "name": "sid",
                         "in": "path",
@@ -108,15 +163,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Subscription updated successfully",
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Subscription"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/model.RawSubscription"
                         }
                     },
                     "404": {
@@ -132,32 +181,49 @@
                         }
                     }
                 }
-            }
-        },
-        "/subscription/{sid}": {
-            "get": {
-                "description": "Возвращает подписку в формате JSON по ее SID из URL",
+            },
+            "put": {
+                "description": "Обновляет подписку по ее SID из URL, новые данные берутся из тела запроса",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "subscriptions"
                 ],
-                "summary": "Получение подписки по SID",
+                "summary": "Обновление подписки по ее SID",
                 "parameters": [
                     {
                         "type": "integer",
+                        "example": 20,
                         "description": "SID подписки",
                         "name": "sid",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Subscription info",
+                        "name": "subscription",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.RawSubscription"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Subscription updated successfully",
                         "schema": {
-                            "$ref": "#/definitions/model.Subscription"
+                            "$ref": "#/definitions/model.RawSubscription"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "404": {
@@ -183,6 +249,7 @@
                 "parameters": [
                     {
                         "type": "integer",
+                        "example": 20,
                         "description": "SID подписки",
                         "name": "sid",
                         "in": "path",
@@ -216,79 +283,43 @@
                     }
                 }
             }
-        },
-        "/subscriptions/report": {
-            "get": {
-                "description": "Выдает сумму стоимости подписок по указанному периоду(конкретному месяцу в формате \"07-2024\"), пользователю и провайдеру; пользователь и провайдер не являются обязательными полями.",
-                "tags": [
-                    "subscriptions"
-                ],
-                "summary": "Подсчет суммы подписок удовлетворяющим условиям",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Период(конкретный месяц в формате ",
-                        "name": "period",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "UID пользователя",
-                        "name": "uid",
-                        "in": "path"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Имя провайдера услуги",
-                        "name": "provider",
-                        "in": "path"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Status OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "model.Subscription": {
+        "model.RawSubscription": {
             "type": "object",
             "properties": {
                 "end_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "12-2025"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 400
                 },
                 "service_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Yandex Plus"
                 },
                 "start_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "07-2025"
                 },
                 "subscription_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 20
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "60601fee-2bf1-4721-ae6f-7636e79a0cba"
+                }
+            }
+        },
+        "model.Report": {
+            "type": "object",
+            "properties": {
+                "total": {
+                    "type": "integer"
                 }
             }
         }
